Implement proxied PostgreSQL Array support
Co-authored-by: rrobetti <7221783+rrobetti@users.noreply.github.com>